--- a/docs/task.md.resolved.9
+++ b/docs/task.md.resolved.9
@@ -18,10 +18,10 @@
 
 - [ ] Add Tests <!-- id: 15 -->
   - [ ] Create implementation plan for tests <!-- id: 16 -->
-    - [ ] Unit Tests: [src/statistics.rs](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs) <!-- id: 17 -->
-      - [ ] Test [record_request](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#24-34) inserts/updates correctly <!-- id: 18 -->
-      - [ ] Test [record_resolved_ip](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#56-61) keeps unique IPs <!-- id: 19 -->
-      - [ ] Test [record_cache_hit](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#35-55) increments correctly <!-- id: 20 -->
+    - [x] Unit Tests: [src/statistics.rs](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs) <!-- id: 17 -->
+      - [x] Test [record_request](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#24-34) inserts/updates correctly <!-- id: 18 -->
+      - [x] Test [record_resolved_ip](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#56-61) keeps unique IPs <!-- id: 19 -->
+      - [x] Test [record_cache_hit](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#35-55) increments correctly <!-- id: 20 -->
     - [x] Unit Tests: Plugins <!-- id: 26 -->
       - [x] Matcher Plugin <!-- id: 27 -->
       - [x] Cache Plugin <!-- id: 28 -->
