--- a/docs/implementation_plan.md.resolved.4
+++ b/docs/implementation_plan.md.resolved.4
@@ -1,48 +1,102 @@
-# Executable Plugins Implementation Plan
+# Add Unit and Integration Tests
 
-We will implement `if` and `return` plugins to mirror MosDNS's `executable` package capabilities.
+## Goal
+
+Add comprehensive testing to ensure reliability of statistics and server functionality.
 
 ## Proposed Changes
 
-### [MODIFY] [src/plugins/mod.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/mod.rs)
-- Update [Context](file:///Users/zhanghu/vpn/clean-dns/src/plugins/mod.rs#17-22): Add `pub abort: bool`.
-- Define `Condition` trait:
-    ```rust
-    pub trait Condition: Send + Sync {
-        fn check(&self, ctx: &Context) -> bool;
-    }
-    ```
-- Update [Plugin](file:///Users/zhanghu/vpn/clean-dns/src/plugins/mod.rs#43-59) trait:
-    ```rust
-    fn as_condition(&self) -> Option<&dyn Condition> { None }
-    ```
+### [REFAC] Refactor to Library Structure
 
-### [MODIFY] [src/plugins/sequence.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/sequence.rs)
-- Update loop to check `ctx.abort`.
+To support `tests/` integration tests, we need to expose modules via `lib.rs`.
 
-### [MODIFY] [src/plugins/matcher.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/matcher.rs)
-- Implement `Condition` trait for [Matcher](file:///Users/zhanghu/vpn/clean-dns/src/plugins/matcher.rs#19-25) (exposing [matches](file:///Users/zhanghu/vpn/clean-dns/src/plugins/matcher.rs#96-133) logic).
-- Note: [Matcher](file:///Users/zhanghu/vpn/clean-dns/src/plugins/matcher.rs#19-25) can still run its own `exec` if configured, but when used as a condition, it just returns bool.
+#### [NEW] [src/lib.rs](file:///Users/zhanghu/vpn/clean-dns/src/lib.rs)
 
-### [NEW] [src/plugins/return_plugin.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/return_plugin.rs)
-- Sets `ctx.abort = true`.
+- Expose modules: [api](file:///Users/zhanghu/vpn/clean-dns/src/api.rs#9-20), `config`, `plugins`, [server](file:///Users/zhanghu/vpn/clean-dns/src/api.rs#9-20), `statistics`.
+- Re-export necessary types.
 
-### [NEW] [src/plugins/if_plugin.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/if_plugin.rs)
-- Config:
-    ```yaml
-    if: "provider:some_matcher"
-    exec: [...]
-    else_exec: [...]
-    ```
-- Logic:
-    ```rust
-    if cond.check(ctx) {
-        exec.run(ctx)
-    } else {
-        else_exec.run(ctx)
-    }
-    ```
+#### [MODIFY] [src/main.rs](file:///Users/zhanghu/vpn/clean-dns/src/main.rs)
 
-## Verification
-- Create config with `if` plugin.
-- Verify `return` stops execution.
+- Reduce to a thin wrapper that calls `clean_dns::...`.
+- Use `clean_dns::config::Config`, `clean_dns::server::Server`, etc.
+
+### [NEW] Unit Tests
+
+#### [MODIFY] [src/statistics.rs](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs)
+
+- Add `#[cfg(test)] mod tests { ... }`.
+- Test [record_request](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#24-34): verify count and timestamp update.
+- Test [record_resolved_ip](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#56-61): verify IP set growth and uniqueness.
+- Test [record_cache_hit](file:///Users/zhanghu/vpn/clean-dns/src/statistics.rs#35-55): verify count increment.
+
+#### [MODIFY] [src/plugins/forward.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/forward.rs)
+- Test config parsing (upstreams, socks5).
+
+#### [MODIFY] [src/plugins/matcher.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/matcher.rs)
+- Test domain matching (exact, suffix) and client IP matching.
+
+#### [MODIFY] [src/plugins/cache.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/cache.rs)
+- Test key generation.
+- Test hit/miss logic.
+
+#### [MODIFY] [src/plugins/sequence.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/sequence.rs)
+- Test execution order of child plugins.
+
+#### [MODIFY] [src/plugins/if_plugin.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/if_plugin.rs)
+- Test condition true/false branches.
+
+#### [MODIFY] [src/plugins/domain_set.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/domain_set.rs)
+- Test loading from file (mock or temporary file).
+- Test matching logic.
+
+#### [MODIFY] [src/plugins/ip_set.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/ip_set.rs)
+- Test parsing CIDRs.
+- Test IP matching.
+
+#### [MODIFY] [src/plugins/hosts.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/hosts.rs)
+- Test host lookup and record generation.
+
+#### [MODIFY] [src/plugins/reject_plugin.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/reject_plugin.rs)
+- Test response code setting.
+
+#### [MODIFY] [src/plugins/return_plugin.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/return_plugin.rs)
+- Test abort flag setting.
+
+#### [MODIFY] [src/plugins/delay_plugin.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/delay_plugin.rs)
+- Test parsing.
+
+#### [MODIFY] [src/plugins/fallback.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/fallback.rs)
+- Test primary success.
+- Test primary failure -> secondary execution.
+
+#### [MODIFY] [src/plugins/ttl.rs](file:///Users/zhanghu/vpn/clean-dns/src/plugins/ttl.rs)
+- Test min/max TTL clamping on response.
+
+### [NEW] Integration Tests
+
+#### [NEW] [tests/integration.rs](file:///Users/zhanghu/vpn/clean-dns/tests/integration.rs)
+
+- Test suite using `tokio::test`.
+- Helper to start server on random/test ports.
+- Test 1: **API Stats**:
+  - Start server.
+  - Call `GET /stats`.
+  - Assert empty/initial stats.
+- Test 2: **DNS Query + Stats**:
+  - Start server.
+  - Send DNS query (using `hickory-client` or raw socket).
+  - Assert response is valid.
+  - Call `GET /stats`.
+  - Assert stats reflect the query (count=1, domain correct).
+
+### [MODIFY] [Cargo.toml](file:///Users/zhanghu/vpn/clean-dns/Cargo.toml)
+
+- Add `reqwest` to dev-dependencies (blocking or async, needed for API test).
+- Add `tokio` with `test-util` feature? It has `full`.
+
+## Verification Plan
+
+### Automated Tests
+
+- Run `cargo test`.
+- Verify all unit and integration tests pass.
